--- a/angular-version/instruction-set.html
+++ b/angular-version/instruction-set.html
@@ -37,9 +37,9 @@
                     Documentation</a></li>
         </ul>
         <p>The simulator consists of a 16-bit cpu and 1024 bytes of memory. All instructions (code) and variables (data)
-            needs to fit inside the memory. For simplicity every instruction (and operand) is 1 byte. Therefore a MOV
-            instruction will use 3 bytes of memory. The simulator provides a console output which is memory mapped from
-            0xE8 to 0xFF. Memory mapped means that every value written to this memory block is visible on the console.
+            needs to fit inside the memory. For simplicity every instruction (and operand) is 2 bytes. Therefore a MOV
+            instruction will use 6 bytes of memory. The simulator provides a console output which is memory mapped from
+            925 to 1023. Memory mapped means that every value written to this memory block is visible on the console.
         </p>
         <h4>Syntax</h4>
         <p>The syntax is similar as most assemblers are using. Every instruction must be on their own line. Labels are
