--- a/angular-version/index.html
+++ b/angular-version/index.html
@@ -94,8 +94,9 @@
                             </tr>
                             <tr ng-repeat="(name, value) in labels" class="codelabel">
                                 <td class="codelabel-name">{{ name }}</td>
-                                <td class="codelabel-line"><a ng-click="jumpToLine(value)">{{ value | number:displayHex
-                                        }}</a></td>
+                                <td class="codelabel-line"><a ng-click="jumpToLine(value)"> {{ get8HigherBits(value)
+                                        | number:displayHex }} | {{ get8LowerBits(value) | number:displayHex }} </a>
+                                </td>
                                 <td class="codelabel-value">{{ memory.data[value] | number:displayHex }} | {{
                                     memory.data[value+1] | number:displayHex }}
                                     <span ng-if="memory.data[value] >= 32 && memory.data[value] <= 126">
