--- a/angular-version/index.html
+++ b/angular-version/index.html
@@ -22,8 +22,8 @@
                 <div class="btn-group">
                     <button type="button" class="btn btn-success navbar-btn" ng-click="run()" ng-hide="isRunning"><span
                             class="glyphicon glyphicon-play"></span> Run</button>
-                    <button type="button" class="btn btn-success navbar-btn" ng-click="runQuickly()" ng-hide="isRunning"><span
-                            class="glyphicon glyphicon-play"></span> Run Quickly</button>
+                    <button type="button" class="btn btn-success navbar-btn" ng-click="runQuickly()"
+                        ng-hide="isRunning"><span class="glyphicon glyphicon-play"></span> Run Quickly</button>
                     <button type="button" class="btn btn-default navbar-btn" ng-click="stop()" ng-show="isRunning"><span
                             class="glyphicon glyphicon-stop"></span> Stop</button>
                     <button type="button" class="btn btn-default navbar-btn" ng-click="executeStep()"
@@ -164,6 +164,20 @@
 
                         <span>Clock speed:</span>
                         <select ng-model="speed" ng-options="item.speed as item.desc for item in speeds"></select>
+
+                        <div>Register addressing</div>
+                        <span style="margin-left:5px;">A:</span>
+                        <a ng-click="displayA = true" ng-hide="displayA">Show</a>
+                        <a ng-click="displayA = false" ng-show="displayA">Hide</a>
+                        <span style="margin-left:5px;">B:</span>
+                        <a ng-click="displayB = true" ng-hide="displayB">Show</a>
+                        <a ng-click="displayB = false" ng-show="displayB">Hide</a>
+                        <span style="margin-left:5px;">C:</span>
+                        <a ng-click="displayC = true" ng-hide="displayC">Show</a>
+                        <a ng-click="displayC = false" ng-show="displayC">Hide</a>
+                        <span style="margin-left:5px;">D:</span>
+                        <a ng-click="displayD = true" ng-hide="displayD">Show</a>
+                        <a ng-click="displayD = false" ng-show="displayD">Hide</a>
                         <button type="button" class="btn btn-default navbar-btn"
                             ng-click="changeRamDisplayMode()">Change RAM display mode (HEX/ASCII)</button>
                         <p class="text-muted">RAM</p>
@@ -191,19 +205,6 @@
                                 <a ng-click="displayHex = true" ng-hide="displayHex">Hex</a>
                                 <a ng-click="displayHex = false" ng-show="displayHex">Decimal</a>
                                 <br>
-                                Register addressing:
-                                <span style="margin-left:5px;">A:</span>
-                                <a ng-click="displayA = true" ng-hide="displayA">Show</a>
-                                <a ng-click="displayA = false" ng-show="displayA">Hide</a>
-                                <span style="margin-left:5px;">B:</span>
-                                <a ng-click="displayB = true" ng-hide="displayB">Show</a>
-                                <a ng-click="displayB = false" ng-show="displayB">Hide</a>
-                                <span style="margin-left:5px;">C:</span>
-                                <a ng-click="displayC = true" ng-hide="displayC">Show</a>
-                                <a ng-click="displayC = false" ng-show="displayC">Hide</a>
-                                <span style="margin-left:5px;">D:</span>
-                                <a ng-click="displayD = true" ng-hide="displayD">Show</a>
-                                <a ng-click="displayD = false" ng-show="displayD">Hide</a>
                             </small>
                         </p>
                     </div>
